Fix blurry loader on high DPI, remove old reference to composer

--- a/src/scss/loader.scss
+++ b/src/scss/loader.scss
@@ -37,6 +37,8 @@
     position: absolute;
     top: 0;
     left: 0;
+    width: 100%;
+    height: 100%;
   }
 
   &-text {
